--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,9 @@ body {
     background-color: blue;
     color:white
 }
+
+@media only screen and (max-width:480px) {
+    body{
+        background-color:red;
+    }
+}
