--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,10 @@ body {
         background-color:red;
     }
 }
+
+@media only screen and (max-width:320px) {
+    body{
+        background-color: yellow;
+        color: black;
+    }
+}
