--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,18 @@ body {
     background-color: blue;
     color:white
 }
+img{
+    float:right;
+    max-width:760px;
+}
 
 @media only screen and (max-width:480px) {
     body{
         background-color:red;
+    }
+    img{
+        float:none;
+        max-width:100%;
     }
 }
 
